# agis

./: .gitignore  Cargo.toml  README.md  RELEASE_NOTES.md
conf/: config.ron  spartan.service
src/: error.rs  lib.rs  log.rs  main.rs  request.rs  response.rs  threadpool.rs
src/config/: mod.rs  server.rs
src/response/: cgi.rs  mod.rs
xtask/: Cargo.toml
xtask/src/: main.rs
