[package]
name = "agis"
version = "0.2.0"
edition = "2021"
description = "A Spartan protocol server"
authors = ["Nathan Fisher"]
repository = "https://codeberg.org/jeang3nie/agis"
keywords = ["networking", "spartan"]
categories = ["network-programming"]
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
getopts = "0.2"
libc = "0.2"
once_cell = "1.15"
ron = "0.7"
tempfile = "3.3"
tree_magic_mini = "3.0"
urlencoding = "2.1"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[profile.release]
codegen-units = 1
lto = true
strip = true
